--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
     <script src="public/js/bootstrap.bundle.min.js"></script>
     <script src="public/js/glightbox.min.js"></script>
     <script src="public/js/script.js"></script>
-    <!-- <script
+    <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&libraries=&v=weekly&channel=2"
       async
-    ></script> -->
+    ></script>
   </body>
 </html>
