--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         bottom: 0;
       }
       .header .wi {
-        top: 52vh;
+        top: 40%;
         right: 5%;
       }
       .header .wi h1 {
@@ -134,7 +134,7 @@
         background-color: #fff;
         color: var(--warna1);
         padding: 0.5rem 1.5rem;
-        margin-top: 2rem;
+        margin-top: 1rem;
         font-size: 1rem;
         text-align: center;
         font-weight: bold;
